[gd_scene load_steps=6 format=2]

[ext_resource path="res://ImportantScene/HUD.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.411765, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0313726, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BottomBox" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -118.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomBox/HBoxContainer"]
margin_right = 201.0
margin_bottom = 78.0
size_flags_horizontal = 3
alignment = 1

[node name="ArmorBar" type="HBoxContainer" parent="BottomBox/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 201.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="BottomBox/HBoxContainer/VBoxContainer/ArmorBar"]
margin_right = 17.0
margin_bottom = 14.0
text = "AP"

[node name="ArmorProgress" type="ProgressBar" parent="BottomBox/HBoxContainer/VBoxContainer/ArmorBar"]
margin_left = 21.0
margin_right = 201.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 45.0
percent_visible = false

[node name="HealthBar" type="HBoxContainer" parent="BottomBox/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 201.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="HP" type="Label" parent="BottomBox/HBoxContainer/VBoxContainer/HealthBar"]
margin_right = 18.0
margin_bottom = 14.0
text = "HP"

[node name="HealthProgress" type="ProgressBar" parent="BottomBox/HBoxContainer/VBoxContainer/HealthBar"]
margin_left = 22.0
margin_right = 201.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 23.0
percent_visible = false

[node name="MarginContainer" type="MarginContainer" parent="BottomBox/HBoxContainer"]
margin_left = 205.0
margin_right = 555.0
margin_bottom = 78.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WeaponHuD" type="HBoxContainer" parent="BottomBox/HBoxContainer"]
margin_left = 559.0
margin_right = 760.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Type" type="Label" parent="BottomBox/HBoxContainer/WeaponHuD"]
margin_right = 98.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Pistol"
align = 1
valign = 1

[node name="Ammo" type="Label" parent="BottomBox/HBoxContainer/WeaponHuD"]
margin_left = 102.0
margin_right = 201.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "30"
align = 1
valign = 1
